--- a/src/pages/QuizList/SearchBar/styles.scss
+++ b/src/pages/QuizList/SearchBar/styles.scss
@@ -20,7 +20,7 @@
   border: none;
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
-  font-family: 'Poppins', sans-serif;
+  font-family: vars.$mainFont;
 }
 
 .filter__search-btn {
