--- a/src/pages/Profil-Settings/styles.scss
+++ b/src/pages/Profil-Settings/styles.scss
@@ -16,16 +16,15 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-
     &-title{
       font-size: 1.5rem;
-        flex-grow: 1;
-        text-align: center;
-        padding: 0.5rem 0 1.5rem 3rem;      
-        @include mixin.breakpoint(desktop) {
-          font-size: 2rem;
-          padding: 1.5rem 0;
-         }
+      line-height: 1.75rem;
+      text-align: center;
+      width: calc(100% - (42px)); 
+      @include mixin.breakpoint(desktop) {
+        font-size: 2rem;
+        padding: 1.5rem 0;        
+      }
     }
   }
   &__form{
