--- a/src/pages/QuizUpdate/styles.scss
+++ b/src/pages/QuizUpdate/styles.scss
@@ -22,25 +22,29 @@
     font-size: 1.5rem;
   }
   &__header {
-    font-size: 1.5rem;
     width: 100%;
-    padding: 1rem;
-    &-title{
-      font-size: 1.5rem;
-      flex-grow: 1;
-      text-align: center;
-      padding: 4rem 0 1.5rem 0;      
-      @include mixin.breakpoint(desktop) {
-        font-size: 2rem;
-        margin-top: 1rem;
-        padding: 1.5rem 0;
-       }
+    &-main{
+      display: flex;
+      flex-flow: row nowrap;
+      justify-content: center;
+      align-items: center;
+      &__title{
+        font-size: 1.5rem;
+        line-height: 1.75rem;
+        text-align: center;    
+        width: calc(100% - (42px)); 
+        @include mixin.breakpoint(desktop) {
+          font-size: 2rem;
+          padding: 1.5rem 0;   
+         }
+      }
     }
   }
   &__header p {
     font-size: 1rem;
     text-align: center;
     color: vars.$primary-dark-color;
+    padding: 1rem 0 1.5rem 0;  
   } 
   &__form{
     width: 100%;
