--- a/src/pages/ProfilFavorites/styles.scss
+++ b/src/pages/ProfilFavorites/styles.scss
@@ -1,41 +1,41 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-.quiz__favoris{
-  padding: 2rem;
-}
-.quiz__title {
-  font-size: 1.5rem;
-  font-weight: 500;
-  padding-top: 1rem;
-  margin-bottom: 1rem;
-  color: vars.$primary-dark-color;
-  text-align: center;
-}
-
-.quiz__subtitle {
-  text-align: center;
-  font-size: 1.5rem;
+.quiz-favoris{
   padding: 1.5rem;
-  color: vars.$main-primary-color;
-  text-align: center;
-  font-weight: 500;
-}
-.quiz__content-list{
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center;
-
-
   @include mixin.breakpoint(desktop) {
-    flex-flow: row wrap;
-    justify-content: space-between;
+   padding: 1.5rem vars.$headerHeight;
+  }
+  &__header{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
     align-items: center;
-    gap: 2rem;
+    width: 100%;
+    &-title {
+      font-size: 1.5rem;
+      line-height: 1.75rem;
+      text-align: center;
+      color: vars.$primary-dark-color;
+      width: calc(100% - (42px)); 
+      @include mixin.breakpoint(desktop) {
+        font-size: 2rem;
+        padding: 1.5rem 0;
+        width: 100%;
+      }
+    }
+  }
+  &__content-list{
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    align-items: center;
+    @include mixin.breakpoint(desktop) {
+      flex-flow: row wrap;
+      gap: 2rem;
+    }
   }
 }
-
 
 
 
