--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   flex-grow: 1;
-
+  justify-content: center;
   &__wrapper {
     max-width: 25rem;
     margin: vars.$headerHeight auto;
@@ -14,14 +14,18 @@
     border-radius: 12px;
     background-color: #fff;
   }
-
   &__isLogged {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 100%;
+    max-width: 22.5rem;
+    background: rgb(255, 255, 255);
+    @include mixin.breakpoint(desktop) {
+      width: 70%;
+    }
   }
-
   &__button {
     outline: 0;
     border: 0;
@@ -38,11 +42,9 @@
 
 .form {
   max-width: 22.5rem;
-
   &__label {
     margin-top: 15px;
   }
-
   &__input {
     outline: 0;
     background: #f2f2f2;
@@ -52,7 +54,6 @@
     font-size: 0.9rem;
     border-radius: 0.7rem;
   }
-
   &__button {
     text-transform: uppercase;
     outline: 0;
@@ -65,18 +66,21 @@
     font-size: 1rem;
     cursor: pointer;
     margin-top: 2.5rem;
-
     &:hover {
       background: vars.$main-secondary-color;
     }
   }
-
+  &__error-message{
+    width: 100%;
+    @include mixin.breakpoint(desktop) {
+      width: 100%;
+    }
+  }
   &__message {
     margin: 0.9rem 0 0;
     color: #a1a1a1;
     font-size: 0.9rem;
   }
-
   &__inscription {
     color: vars.$main-primary-color;
     padding: 0.5rem;
