--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -153,7 +153,7 @@ button {
 }
 
 // Modification des styles des composants MUI de boutons
-// Bouton créer un quiz (gérer mes quiz: /profile/quiz)
+// Bouton créer un quiz (gérer mes quiz: /profil/quiz)
 .css-sghohy-MuiButtonBase-root-MuiButton-root{
   font-family: vars.$mainFont !important;
 }
