--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -4,8 +4,7 @@
 .quiz-list {
   &__title {
     font-size: 1.5rem;
-    text-transform: uppercase;
-    font-weight: 500;
+    line-height: 1.75rem;
     padding-top: 1rem;
     margin-bottom: 2rem;
     color: vars.$primary-dark-color;
@@ -42,6 +41,13 @@
     font-size: 1.25rem;
     text-decoration: underline;
     text-transform: uppercase;
+  }
+  &__not-found {
+    font-size: 1.2rem;
+    padding-top: 1rem;
+    margin-bottom: 2rem;
+
+    text-align: center;
   }
 }
 
