Home: update layout and css

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -7,7 +7,7 @@
 .header {
   background-color: #fff;
   color: vars.$main-primary-color;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 2.5px 15px, rgba(0, 0, 0, 0.23) 0px 3px 3px;
+  // box-shadow: rgba(0, 0, 0, 0.19) 0px 2.5px 15px, rgba(0, 0, 0, 0.23) 0px 3px 3px;
   width: 100vw;
   height: vars.$headerHeight;
   position: fixed;
