--- a/src/pages/Profile/styles.scss
+++ b/src/pages/Profile/styles.scss
@@ -2,19 +2,36 @@
 @use '../../styles/vars';
 
 .profile {
+  min-height: 70vh;
   display: flex;
-  flex-direction: column;
-  justify-content: start;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  padding: 1.5rem;
+  @include mixin.breakpoint(desktop) {
+   padding: 1.5rem vars.$headerHeight;
+  }
+  &__wrapper{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    max-width: 80%;
+
+  }
 
   &__container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     text-align: center;
     background-color: white;
     border: 1px solid black;
     padding: 1rem;
     border-radius: 1rem;
+    @include mixin.breakpoint(desktop) {
+      flex-direction: row;
+     }
   }
 
   &__user {
@@ -38,7 +55,7 @@
 
   &__title {
     font-size: 1.5rem;
-    font-weight: 500;
+    line-height: 1.75rem;
     padding-top: 1rem;
     margin-bottom: 1rem;
     color: vars.$primary-dark-color;
