--- a/src/pages/Profile/styles.scss
+++ b/src/pages/Profile/styles.scss
@@ -2,55 +2,31 @@
 @use '../../styles/vars';
 
 .profile {
-  min-height: 70vh;
   display: flex;
+  flex-grow: 1;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 1.5rem;
+
   @include mixin.breakpoint(desktop) {
-   padding: 1.5rem vars.$headerHeight;
+    padding: 1.5rem vars.$headerHeight;
   }
-  &__wrapper{
+
+  &__wrapper {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: start;
-    max-width: 80%;
+    width: 100%;
 
-  }
+    @include mixin.breakpoint(tablet) {
+      max-width: 70%;
+    }
 
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    background-color: white;
-    border: 1px solid black;
-    padding: 1rem;
-    border-radius: 1rem;
     @include mixin.breakpoint(desktop) {
-      flex-direction: row;
-     }
-  }
-
-  &__user {
-    background-color: vars.$main-primary-color;
-    border-radius: 1rem;
-    padding: 3rem;
-    color: white;
-  }
-
-  &__user-stat {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin-bottom: 2rem;
-  }
-
-  &__user-title {
-    font-size: 2rem;
+      max-width: 70%;
+    }
   }
 
   &__title {
@@ -62,12 +38,70 @@
     text-align: center;
   }
 
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background-color: vars.$main-secondary-color;
+
+    padding: 1rem;
+    border-radius: 1rem;
+
+    @include mixin.breakpoint(desktop) {
+      flex-direction: row;
+    }
+  }
+
+  &__header {
+    background-color: vars.$main-secondary-color;
+    border-radius: 1rem;
+    padding: 1rem;
+    color: vars.$primary-dark-color;
+
+    @include mixin.breakpoint(desktop) {
+      height: 100%;
+      width: 40%;
+    }
+
+    &__user{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      margin-bottom: 2rem;
+      font-size: 2rem;
+
+      
+      &-pseudo {
+        font-size: 2rem;
+      }
+
+    }
+    &__score {
+      margin-top: 1rem;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: center;
+      align-items: center;
+      gap: 1rem;
+      font-size: 1.5rem;
+
+      &-average{
+        font-weight: bold;
+      }      
+    }
+    
+  }
+  &__update{
+    padding: 2px;
+  }
   &__update:hover {
     transition: 0.5s;
     transform: rotate(360deg);
   }
 
-  &__settings {
+  &__navigation {
     width: 100%;
     height: 100%;
     display: flex;
@@ -75,40 +109,74 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    margin-top: 2rem;
     padding: 1rem;
-    border-left: 1px solid black;
-    margin-left: 1rem;
+    // border-left: 1px solid black;
+    // margin-left: 1rem;
 
     @include mixin.breakpoint(desktop) {
-      width: 80%;
+      margin-top: 0;
+      width: 60%;
+
+    }
+    &-link {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 15px 25px;
+      border-radius: 0.5rem;
+      background-color: vars.$main-primary-color;
+      color: white;
+      font-size: 1.2rem;
+      cursor: pointer;
+      transition: 0.5s;
+      @include mixin.breakpoint(desktop) {
+
+        width: 85%;
+  
+      }
+    }
+  
+    &-link:hover {
+      filter: brightness(1.3);   
+    }
+
+    &__btn-log-out{
+      outline: 0;
+      border: 0;
+      font-family: vars.$mainFont;
+      background: vars.$primary-dark-color;
+      padding: 15px 25px;
+      border-radius: 0.5rem;
+      color: #fff;
+      font-weight: 400;
+      font-size: 1rem;   
+      text-align: center;
+      cursor: pointer;
+      border: 3px solid vars.$primary-dark-color;
+      margin-top: 2rem;
+
+  
+      &:hover {        
+        background-color: #fff;
+        color: vars.$primary-dark-color;
+        
+
+ 
+      }  
     }
   }
 
-  &__quiz {
-    background-color: vars.$main-primary-color;
-    color: white;
-    padding: 0.25rem;
-    border-radius: 0.5rem;
-    font-size: 1.2rem;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    transition: 0.5s;
-  }
-  &__quiz:hover {
-    text-decoration: underline;
-  }
 }
 
 .profile__quiz--delete {
+  font-family: vars.$mainFont;
+  font-size: 1rem;
   background: red;
-  font-size: 0.75rem;
+
   color: white;
-  padding: 0.25rem;
-  border-radius: 1rem;
+  padding: 15px 15px;
+  border-radius: 0.5rem;
 }
 
-.profile__score {
-  margin-top: 1rem;
-  font-size: 1.5rem;
-}
