--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,13 @@ button {
   font-weight: 700;
 }
 
+.profile-page-title{
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 1.75rem;
+  color: vars.$main-secondary-color;
+}
+
 .error-message {
   padding: 0.5rem;
   margin: 0.5rem 0;
@@ -75,12 +82,13 @@ button {
 .btn-primary {
   outline: 0;
   border: 0;
-  padding: 6px 1rem;
+  font-family: vars.$mainFont;
   background: vars.$main-primary-color;
-  border-radius: 4px;
+  padding: 15px 15px;
+  border-radius: 0.5rem;
   color: #fff;
   font-weight: 400;
-  font-size: 0.9rem;
+  font-size: 1rem;
   line-height: 1rem;
   text-align: center;
   cursor: pointer;
