Profile History: add css

--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -60,7 +60,7 @@
     text-transform: capitalize;
   }
 
-  &__difficulty {
+  &__level {
     background: linear-gradient(
       to bottom,
       vars.$main-secondary-color,
