--- a/src/pages/ProfileHistory/styles.scss
+++ b/src/pages/ProfileHistory/styles.scss
@@ -36,6 +36,12 @@
         width: 100%;
       }
     }
+    &-subtitle {
+      font-size: 1.2rem;
+      text-align: center;
+      color: vars.$primary-dark-color;
+      padding: 1rem 0 1.5rem 0;  
+    }
   }
 
   &__container {
