--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -14,52 +14,56 @@
   z-index: 100;
   display: block;
 
-&__container{
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px 2rem;
-  height: vars.$headerHeight;
-  @include mixin.breakpoint(desktop) {
-    padding: 0px vars.$headerHeight; 
+  &__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
-  }
-}
+    padding: 0px 2rem;
+    height: vars.$headerHeight;
 
-/*==================== LOGO ========================*/
-&__logo{
-  display: flex;
-  flex-direction: row; 
-  align-items: center;
-  gap: 0.5rem;
-  &-img{
-    width: 100px;
-    max-height: vars.$headerHeight;
+    @include mixin.breakpoint(desktop) {
+      padding: 0px vars.$headerHeight;
+      justify-content: space-between;
+    }
   }
-}
 
-/*==================== NAVBAR ========================*/
-  &__nav{
+  /*==================== LOGO ========================*/
+  &__logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+
+    &-img {
+      width: 100px;
+      max-height: vars.$headerHeight;
+    }
+  }
+
+  /*==================== NAVBAR ========================*/
+  &__nav {
     height: vars.$headerHeight;
     position: absolute;
-    display:none;
+    display: none;
     top: vars.$headerHeight;
-    left:0;
+    left: 0;
+
     @include mixin.breakpoint(desktop) {
       display: block;
-      position:inherit;
+      position: inherit;
     }
+
     // NAVBAR - liste des élements de navigation <ul>
     &-list {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       height: calc(100vh - vars.$headerHeight);
       width: 100vw;
-
       background-color: vars.$primary-dark-color;
+
       @include mixin.breakpoint(desktop) {
         height: 100%;
         width: auto;
@@ -67,53 +71,52 @@
         justify-content: center;
         align-items: center;
         background-color: #fff;
-      }      
+        font-weight: 500;
+      }
+
       //NAVBAR - élements de navigation <li>
       &__items {
         display: block;
-        font-size: 1.25rem;                
+        font-size: 1.25rem;
         width: 100%;
-        /* border-top: 1px solid rgba(255, 255, 255, 0.555); */
         text-align: center;
-
         margin-right: 0px;
+        text-transform: uppercase;
+
         @include mixin.breakpoint(desktop) {
           width: auto;
-          margin-right: 1.25rem;
-          border-top:none;
+          margin-right: 1.5rem;
+          border-top: none;
           border-radius: 3px;
         }
       }
+
       // NAVBAR - Liens des éléments <NavLink>/<a>
-      &__items-link{
-        display:block;
+      &__items-link {
+        display: block;
         width: 100%;
         height: 100%;
-        padding: 20px 0;    
+        padding: 20px 0;
         background-color: vars.$primary-dark-color;
-        color:#fff;
+        color: #fff;
+        font-size: 1.25rem;
+        font-weight: 500;
+
         @include mixin.breakpoint(desktop) {
           background-color: #fff;
           color: vars.$main-primary-color;
-        }     
-        &--active{
-          color: vars.$main-secondary-color; 
+        }
+
+        &--active {
+          color: vars.$main-secondary-color;
           background-color: #fff;
         }
       }
-      &__items-link:hover{
-        color: vars.$secondary-light-color; 
-        background-color: #fff;       
-      }  
+
+      &__items-link:hover {
+        color: vars.$secondary-light-color;
+        background-color: #fff;
+      }
     }
   }
 }
-
-
-
-
-
-
-
-
-
