--- a/src/pages/Confidentiality/styles.scss
+++ b/src/pages/Confidentiality/styles.scss
@@ -25,6 +25,7 @@
 
   &__title{
     font-size: 1.5rem;
+    font-weight: 500;   
     line-height: 1.75rem;
     padding-top: 1rem;
     margin-bottom: 2rem;
