--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -86,6 +86,7 @@
     margin-bottom: 2rem;
     color: vars.$primary-dark-color;
     text-align: center;
+    font-weight: 500;
   }
   &__result{
     padding-left: 2rem;
