--- a/src/components/CardProfil/styles.scss
+++ b/src/components/CardProfil/styles.scss
@@ -1,154 +1,86 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-/*==================== CARD ========================*/
-
-.card {
+.team-card {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  overflow: hidden;
-  background-color: white;
-  width: 300px;
-  height: 440px;  
+  width: 250px;
+  height: 350px;
   margin: 1rem auto;
   border-radius: 1rem;
+  background-color: vars.$primary-light-color;
   box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.3);
+  color: white;
+  overflow: hidden;
   transition: 0.2s ease-in-out;
 
   &:hover {
     transform: scale(1.01);
     box-shadow: 0px 10px 20px 2px vars.$main-primary-color;
   }
-}
 
-.card-header__img {
-  display: block;
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
-}
+  &__header {
+    height: 150px;
 
-.card-body {
-  padding: 0 0.5rem;
-  height:220px;
-
-  &__title {
-    text-align: center;
-    font-size: 1.5rem;
-    padding: 1rem 0;
-    height: 75px;
+    &-img {
+      width: 120px;
+      margin-top: 0.5rem;
+      height: auto;
+      clip-path: circle(50%);
+    }
   }
 
-  &__tag {
+  &__body {
+    flex-grow: 1;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0;
+    flex-flow: column nowrap;
+    gap: 1rem;
+
+    &-name{
+      font-size: 1.2rem;
+      font-weight: 600;
+    }
+
+    &-roles{
+      font-weight: 600;
+      color: vars.$primary-dark-color;
+
+      &__role{
+        font-family: vars.$secondaryFont;
+        font-weight: 500;
+        font-size: 1.2rem;
+      }
+      
+      &__other-role{
+        font-size: 0.9rem;
+        padding-top: 4px;
+      }
+    }
   }
 
-  &__categorie {
-    background: linear-gradient(
-      to bottom,
-      vars.$main-primary-color,
-      vars.$primary-light-color
-    );
+  &__footer {
+    padding: 1rem;
+    background-color: vars.$primary-dark-color;
     color: white;
-    border-radius: 1rem;
-    padding: 0.5rem;
-      text-transform: capitalize;
   }
-
-  &__difficulty {
-    background: linear-gradient(
-      to bottom,
-      vars.$main-secondary-color,
-      vars.$secondary-light-color
-    );
-    color: white;
-    border-radius: 1rem;
-    padding: 0.5rem;
-    text-transform: capitalize;
-  }
-
-  &__tag2 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0;
-  }
-
-  &__autor {
-    display: flex;
-    align-items: center;
-  }
-
-  &__favoris {
-    background: none;
-    border: none;
-  }
-}
-
-
-// CARD PROFIl
-.about__team {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.about__team-card {
-  border-radius: 1rem;
-  background-color: rgb(13, 114, 218);
-  box-shadow: 0 0.1rem 1rem rgba(0, 0, 0, 0.3);
-/*   border: 2px solid vars.$primary-dark-color; */
-/*   backdrop-filter: blur(15px); */
-  color: white;
-  display: flex;
-  flex-direction: column;
-  width: 250px;
-  height: 350px;  
-  overflow: hidden;
-
-}
-
-.team-card__header{
-  height: 150px;
-}
-.team-card__header-img{
-  width: 120px;
-  margin-top: 0.5rem;
-  height: auto;
-  clip-path: circle(50%);
-}
-
-.team-card__footer {
-  margin-top: 5rem;
-  padding: 1rem;
-  background-color: vars.$primary-dark-color;
-  color: white;
-}
-
-.team-card__contact  {
-display: flex;
-flex-direction: row;
-justify-content: center;
-}
-
-.team-card__contact > li {
-  margin: 10px;
-  padding: 0.5rem;
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(15px);
-  box-shadow: 0 5px 45px rgba(0,0,0,0.1);
   
+  &__contact {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+    &>li {
+      margin: 10px;
+      padding: 0.5rem;
+      border-radius: 5px;
+      background-color: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(15px);
+      box-shadow: 0 5px 45px rgba(0, 0, 0, 0.1);
+
+      &:hover {
+        background-color: vars.$main-secondary-color;
+      }
+    }
+  }
 }
-
-.team-card__contact > li:hover {
-color: vars.$main-primary-color;
-  
-}
-
-
-
