--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,6 +22,23 @@ button {
   font-weight: 700;
 }
 
+.navigation-link{
+  display: block;
+  padding: 15px 25px;
+  border-radius: 0.5rem;
+  background-color: vars.$main-primary-color;
+  color: white;
+  font-size: 1.2rem;
+  text-align: center;
+  cursor: pointer;
+  transition: 0.5s;
+
+  &:hover {
+    filter: brightness(1.3);
+  }
+
+}
+
 .profile-page-title{
   font-size: 1.5rem;
   font-weight: 500;
