--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,10 +25,11 @@ button {
 .navigation-link{
   display: block;
   padding: 15px 25px;
+  margin-bottom: 2rem;
   border-radius: 0.5rem;
   background-color: vars.$main-primary-color;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-align: center;
   cursor: pointer;
   transition: 0.5s;
@@ -94,6 +95,20 @@ button {
 }
 .success-message a:hover {
   text-decoration: underline;
+}
+
+.redirect-link {
+  padding: 15px 25px;
+  border-radius: 0.5rem;
+  background-color: vars.$main-primary-color;
+  color: white;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: 0.5s;
+
+  &:hover {
+    filter: brightness(1.3);
+  }
 }
 
 .btn-primary {
