--- a/src/components/LinkExit/styles.scss
+++ b/src/components/LinkExit/styles.scss
@@ -1,7 +1,7 @@
 @use '../../styles/mixin';
 @use '../../styles/vars';
 
-.btn-Exit{
+.link-exit{
     outline: 0;
     border: none;
     padding: 0.5rem;  
