--- a/src/pages/ProfileQuiz/styles.scss
+++ b/src/pages/ProfileQuiz/styles.scss
@@ -3,7 +3,7 @@
 
 .quiz__management{
   padding: 1.5rem;
-  @include mixin.breakpoint(desktop) {
+  @include mixin.breakpoint(tablet) {
    padding: 1.5rem vars.$headerHeight;
   }
   &__header{
@@ -36,7 +36,7 @@
   flex-direction: column; 
   justify-content: center;
   align-items: center;
-  @include mixin.breakpoint(desktop) {
+  @include mixin.breakpoint(tablet) {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
