--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -90,7 +90,7 @@
   }
   &__result{
     padding-left: 2rem;
-    @include mixin.breakpoint(desktop) {
+    @include mixin.breakpoint(tablet) {
       padding-left: 6rem;
     }
     &-number{
@@ -105,7 +105,7 @@
     justify-content: center;
     align-items: center;
     padding: 1.5rem;
-    @include mixin.breakpoint(desktop) {
+    @include mixin.breakpoint(tablet) {
       flex-flow: row wrap;
       justify-content: center;
       align-items: center;
