Update css Footer and clean sass variables

--- a/maquette/style.css
+++ b/maquette/style.css
@@ -9,7 +9,7 @@
   --main-secondary-color: #fc9100;
   --secondary-light-color: #ffb116;
   --secondary-light2-color: #ffebc4;
-  --main-third-color: #dd5751;
+  --secondary-dark-color: #dd5751;
   --valid-answer-color: #3ea951;
   --wrong-answer-color: #eb3c33;
 }
