--- a/src/components/CardHistory/styles.scss
+++ b/src/components/CardHistory/styles.scss
@@ -112,7 +112,7 @@
   &__footer{
     &__score{
       font-family: vars.$secondaryFont;
-      color: vars.$main-third-color;
+      color: vars.$secondary-dark-color;
       font-weight: 500;
       padding: 1rem;
 
