--- a/src/components/CardHome/styles.scss
+++ b/src/components/CardHome/styles.scss
@@ -38,7 +38,8 @@
     &-text{
       padding-top: 8px;
       font-size: 0.8rem;
-      color: vars.$main-primary-color;
+      color: vars.$primary-dark-color;
+      font-weight: 600;
     }
   }
 
