--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -11,26 +11,65 @@
 
   &__contact {
     display: flex;
+    flex-flow: row;
     justify-content: space-around;
     align-items: center;
     padding: 0.75rem;
-    &-logo{
-      &-img{
-        width: 125px;
-        height: auto;
+    gap:1rem;
+    @include mixin.breakpoint(desktop) {
+      flex-flow: row wrap;
+      justify-content: space-around;
+      align-items: center;
+      gap: 2rem;
+    }
+    &-seo{
+      display: flex;
+      flex-flow: column;
+      width: 50%;
+      @include mixin.breakpoint(desktop) {
+        flex-flow: row wrap;
+        justify-content: center;
+        align-items: first baseline;
+        gap: 0.5rem;
+      }
+      &__logo{
+        &-img{
+          width: 100px;
+          height: auto;
+        }
+      }
+      &__text{
+        font-size:0.7rem;
+        margin-top: 0.5rem;
+        margin-bottom: 1rem;
+        text-align: center;
+        @include mixin.breakpoint(tablet) {
+          font-size:0.8rem;
+        }
+        @include mixin.breakpoint(desktop) {
+          font-size:0.9rem;
+          text-align: left;
+          margin: 0;
+        }
       }
     }
   }
-
-  &__contact-title {
-    padding-bottom: 0.2rem;
-    font-weight: bold;
-  }
-
+  
   &__contact-mail {
     display: flex;
-    flex-flow: row;
-    align-items: center;
+    flex-flow:column;
+    justify-content: center;
+    align-items: flex-start;
+    
+      &__title {
+        padding-bottom: 0.2rem;
+        font-weight: bold;
+      }
+      &__email  {
+        display: flex;
+        flex-flow: row nowrap;
+    
+      }
   }
 }
 
