--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,21 +4,15 @@ $primary-dark-color: #003051;
 $primary-light-color: #8dbff1;
 
 $main-secondary-color: #fc9100;
+$secondary-dark-color: #dd5751;
 $secondary-light-color: #ffb116;
-$secondary-light2-color: #ffebc4;
-
-$main-third-color: #dd5751;
 
 $valid-answer-color: #3ea951;
-$valid-answer-color2: #94b299;
 $wrong-answer-color: #eb3c33;
 
-$darkcolor: #213547;
-
-// TAILLES
-$headerHeight: 4rem;
-
-//POLICE
+//POLICES
 $mainFont:'Poppins', cursive;
 $secondaryFont:'Bangers', cursive;
 
+// TAILLES
+$headerHeight: 4rem;
