--- a/src/pages/QuizList/styles.scss
+++ b/src/pages/QuizList/styles.scss
@@ -105,6 +105,8 @@
     justify-content: center;
     align-items: center;
     padding: 1.5rem;
+    gap: 1.5rem;
+    margin: 1.5rem 0.5rem 1rem;
     @include mixin.breakpoint(tablet) {
       flex-flow: row wrap;
       justify-content: center;
