--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -8,7 +8,7 @@
   align-items: center;
   flex-grow: 1;
   &__wrapper {   
-    max-width: 25rem;
+    max-width: 90%;
     margin: vars.$headerHeight auto;
     padding: 1rem 2.5rem;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -89,6 +89,7 @@
     margin: 0.9rem 0 0;
     color: #a1a1a1;
     font-size: 0.9rem;
+    text-align: center;
   }
 
   &__inscription {
