--- a/src/pages/Register/styles.scss
+++ b/src/pages/Register/styles.scss
@@ -7,7 +7,7 @@
   flex-grow: 1;
   justify-content: center;
   &__wrapper {
-    max-width: 25rem;
+    max-width: 90%;
     margin: vars.$headerHeight auto;
     padding: 1rem 2.5rem;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.25);
@@ -80,6 +80,7 @@
     margin: 0.9rem 0 0;
     color: #a1a1a1;
     font-size: 0.9rem;
+    text-align: center;
   }
   &__inscription {
     color: vars.$main-primary-color;
